[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Walk Pass/Menus/exit.png" type="Texture" id=1]
[ext_resource path="res://sprites/Walk Pass/Menus/play.png" type="Texture" id=2]
[ext_resource path="res://sprites/Walk Pass/Menus/retry.png" type="Texture" id=3]
[ext_resource path="res://sprites/Walk Pass/Walk Pass/Walk Pause.png" type="Texture" id=4]
[ext_resource path="res://scripts/Walk Pause.gd" type="Script" id=5]

[node name="Walk Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="PassWallWhite" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.509804 )

[node name="WalkPause" type="Sprite" parent="."]
position = Vector2( 656, 176 )
scale = Vector2( 0.815, 0.745 )
texture = ExtResource( 4 )

[node name="Walk Pause" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Play" type="Button" parent="Walk Pause"]
margin_left = 560.0
margin_top = 304.0
margin_right = 752.0
margin_bottom = 416.0
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="Retry" type="Button" parent="Walk Pause"]
margin_left = 560.0
margin_top = 432.0
margin_right = 752.0
margin_bottom = 544.0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="Exit" type="Button" parent="Walk Pause"]
margin_left = 560.0
margin_top = 560.0
margin_right = 752.0
margin_bottom = 672.0
icon = ExtResource( 1 )
flat = true
expand_icon = true

[connection signal="pressed" from="Walk Pause/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Walk Pause/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Walk Pause/Exit" to="." method="_on_Exit_pressed"]
